<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>caio.portfolio</groupId>
	<artifactId>livraria</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Livraria</name>
	<description>Serviço completo para gerenciamento de livraria</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
	    	<groupId>org.springframework.boot</groupId>
	    	<artifactId>spring-boot-devtools</artifactId>
	    	<scope>runtime</scope>
	    	<optional>true</optional>
	    </dependency>
	    <dependency>
	      	<groupId>org.springframework.boot</groupId>
	      	<artifactId>spring-boot-configuration-processor</artifactId>
	      	<optional>true</optional>
	    </dependency>
	    <dependency>
	      	<groupId>org.projectlombok</groupId>
	      	<artifactId>lombok</artifactId>
	      	<optional>true</optional>
	    </dependency>
	    
	    <dependency>
	      	<groupId>org.springframework.boot</groupId>
	      	<artifactId>spring-boot-starter-data-jpa</artifactId>
	    </dependency>
	    <dependency>
	      	<groupId>org.springframework.boot</groupId>
	      	<artifactId>spring-boot-starter-validation</artifactId>
	    </dependency>
	    <dependency>
	      	<groupId>com.h2database</groupId>
	      	<artifactId>h2</artifactId>
	      	<scope>runtime</scope>
	    </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
	        	<artifactId>maven-compiler-plugin</artifactId>
	        	<configuration>
	          		<annotationProcessorPaths>
	            		<path>
	              			<groupId>org.springframework.boot</groupId>
	              			<artifactId>spring-boot-configuration-processor</artifactId>
	            		</path>
	            		<path>
					        <groupId>org.projectlombok</groupId>
					        <artifactId>lombok</artifactId>
					    </path>
	          		</annotationProcessorPaths>
	        	</configuration>
	      	</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
		          	<excludes>
		            	<exclude>
		              		<groupId>org.projectlombok</groupId>
		              		<artifactId>lombok</artifactId>
		            	</exclude>
		          	</excludes>
		        </configuration>
			</plugin>
		</plugins>
	</build>

</project>
